--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
+
+<h1 *ngIf="!(data | async)?.error">
+  Data: {{ data | async | json }}
 </h1>
+<span class="error" *ngIf="(data | async)?.error">
+  There was an error.
+  {{ (data | async)?.error }}
+</span>
